# AKShare

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  changeLog.md  requirements.txt  run_app.sh  run_dashboard.sh  启动面板.command
analysis/: cross_indicator.py  cycle_credit.py  cycle_debt.py  cycle_inventory.py  cycle_merrill.py  real_estate.py  signals.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  cycles.py  data.py  real_estate.py  refresh.py  signals.py
backend/app/core/: cache.py  db.py  refresh.py  serial.py
backend/app/schemas/: __init__.py  cycles.py  refresh.py  signals.py
backend/tests/: test_golden.py
dashboard/: app.py  config.py  db.py  refresh.py
dashboard/assets/: dark-theme.css  fonts.css
dashboard/callbacks/: common.py
dashboard/components/: charts.py  controls.py  layout.py
dashboard/pages/: credit_cycle.py  debt_cycle.py  inventory_cycle.py  merrill_clock.py  overview.py  real_estate.py
docs/: architecture-upgrade.md  data-sources-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/composables/: useCountUp.ts
frontend/src/design/: echarts.theme.ts  phases.ts  tokens.css
frontend/src/pages/: CreditCycle.vue  DebtCycle.vue  Demographics.vue  InventoryCycle.vue  MerrillClock.vue  (+3 more)
scripts/: 01_fetch_data.py  02_compute_derived.py  _pipeline.py  _pipeline_test.py
shared/: openapi.json
(+11 files in other folders)
