[project]
name = "macro-backend"
version = "1.0.0"
description = "FastAPI serving the (unchanged) macro analysis core"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",          # for TestClient
    # analysis core deps (inherited, restated for backend isolation):
    "akshare>=1.14.0",
    "pandas>=1.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = [".."]   # repo root, so `import analysis` / `import backend` work
testpaths = ["tests"]
